# autocommit

./: .pre-commit-config.yaml  autocommit_program.py  pyproject.toml
